Fixed issue with image cropping in hero.

--- a/css/style.css
+++ b/css/style.css
@@ -402,37 +402,35 @@ nav a:hover,nav a:focus{
         opacity: 1;
     }
 
-    .hero h1{
-        font-size: 4rem;
-    }
 }
 
 @media screen and (min-width: 1000px){
-
+    
     .intro{
         background-color: var(--clr-light);
         padding: 10%;
     }
-
+    
     .hero{
         background-color: var(--clr-white);
         border: var(--clr-primary-dark) 1.5em solid;
         box-sizing: border-box;
         max-width: 1000px;
         margin: 0 auto;
+        
+        display: flex;
     }
-
+    
     .hero::after{
-        z-index: 1;
+        z-index: 0;
         opacity: 1;
-
+        
         bottom: -1.5em;
         right: -1.5em;
         left: 60%;
         
-        clip-path: polygon(66% 21%, 62% 56%, 89% 76%, 98% 100%, 0 100%, 0 17%, 45% 4%);
     }
-
+    
     .hero h1{
         text-align: left;
         font-size: 4.5rem;
@@ -454,7 +452,7 @@ nav a:hover,nav a:focus{
     }
 
     .hero::after{
-        clip-path: polygon(61% 22%, 55% 59%, 82% 79%, 86% 100%, 0 100%, 0 17%, 42% 4%);
+        shape-outside: polygon(61% 22%, 55% 59%, 82% 79%, 86% 100%, 0 100%, 0 17%, 42% 4%);
     }
 }
 
@@ -464,7 +462,7 @@ nav a:hover,nav a:focus{
     }
 
     .hero::after{
-        clip-path: polygon(48% 17%, 51% 59%, 67% 80%, 73% 100%, 0 100%, 0 17%, 26% 0);
+        shape-outside: polygon(48% 17%, 51% 59%, 67% 80%, 73% 100%, 0 100%, 0 17%, 26% 0);
     }
 }
 
